add new sprite images

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                             <ul class="tabs__tab-card card">
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                       <img src="./img/search.svg" alt="">
+                                       <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                        <a href="">Creative Design Layout</a>
                                        <p>Design & Fun</p>
                                     </div>
@@ -121,7 +123,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photoshop</p>
                                      </div>
@@ -129,7 +133,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Back To School</a>
                                         <p>Fashion & Style</p>
                                      </div>
@@ -137,7 +143,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photography</p>
                                      </div>
@@ -145,7 +153,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photography</p>
                                      </div>
@@ -153,7 +163,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Unique Ideas</a>
                                         <p>Interior</p>
                                      </div>
@@ -165,7 +177,9 @@
                             <ul class="tabs__tab-card card">
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                       <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                        <a href="">Creative Design Layout</a>
                                        <p>Design & Fun</p>
                                     </div>
@@ -177,7 +191,9 @@
                             <ul class="tabs__tab-card card">
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                       <img src="./img/search.svg" alt="">
+                                       <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                        <a href="">Creative Design Layout</a>
                                        <p>Design & Fun</p>
                                     </div>
@@ -185,7 +201,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photoshop</p>
                                      </div>
@@ -193,31 +211,23 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Back To School</a>
                                         <p>Fashion & Style</p>
                                      </div>
                                     <img class="card__item-img" src="./img/images-img1-3.jpg" alt="">
                                 </li>
-                                <!-- <li class="card__item">
-                                    <img class="card__item-img" src="./img/images-img1-1.jpg" alt="">
-                                </li>
-                                <li class="card__item">
-                                    <img class="card__item-img" src="./img/images-img1-3.jpg" alt="">
-                                </li>
-                                <li class="card__item">
-                                    <img class="card__item-img" src="./img/images-img1-4.jpg" alt="">
-                                </li>
-                                <li class="card__item">
-                                    <img class="card__item-img" src="./img/images-img1-6.jpg" alt="">
-                                </li> -->
                             </ul>
                         </div>
                         <div class="tabs__tab  tab-4 ">
                             <ul class="tabs__tab-card card">
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                       <img src="./img/search.svg" alt="">
+                                       <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                        <a href="">Creative Design Layout</a>
                                        <p>Design & Fun</p>
                                     </div>
@@ -225,7 +235,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photoshop</p>
                                      </div>
@@ -233,7 +245,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photography</p>
                                      </div>
@@ -241,7 +255,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Unique Ideas</a>
                                         <p>Interior</p>
                                      </div>
@@ -249,7 +265,9 @@
                                 </li>
                                                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photography</p>
                                      </div>
@@ -261,7 +279,9 @@
                             <ul class="tabs__tab-card card">
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                       <img src="./img/search.svg" alt="">
+                                       <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                        <a href="">Creative Design Layout</a>
                                        <p>Design & Fun</p>
                                     </div>
@@ -269,7 +289,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Back To School</a>
                                         <p>Fashion & Style</p>
                                      </div>
@@ -277,7 +299,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photography</p>
                                      </div>
@@ -285,7 +309,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Unique Ideas</a>
                                         <p>Interior</p>
                                      </div>
@@ -293,7 +319,9 @@
                                 </li>
                                 <li class="card__item">
                                     <div class="card__item-block">
-                                        <img src="./img/search.svg" alt="">
+                                        <svg>
+                                            <use xlink:href ="./img/sprite.svg#search"></use>
+                                        </svg>
                                         <a href="">Creative Design Layout</a>
                                         <p>Photography</p>
                                      </div>
@@ -323,9 +351,15 @@
                             <img class="member__card-img" src="./img/images-team-img-1.jpg" alt="">
                             <div class="member__card-hover">
                                 <div class="member__card-socials socials">
-                                    <a class="socials__item socials__item--facebook" href=""></a>
-                                    <a class="socials__item socials__item--twitter" href=""></a>
-                                    <a class="socials__item socials__item--behance" href=""></a>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#facebook"></use>
+                                    </svg>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#twitter"></use>
+                                    </svg>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#behance"></use>
+                                    </svg>
                                 </div>
                             </div>
                         </div>
@@ -340,9 +374,15 @@
                             <div class="member__card-hover">
                                 <p>It is a long established fact that a reader will be distracted</p>
                                 <div class="member__card-socials socials">
-                                    <a class="socials__item socials__item--facebook" href=""></a>
-                                    <a class="socials__item socials__item--twitter" href=""></a>
-                                    <a class="socials__item socials__item--behance" href=""></a>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#facebook"></use>
+                                    </svg>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#twitter"></use>
+                                    </svg>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#behance"></use>
+                                    </svg>
                                 </div>
                             </div>
                         </div>
@@ -356,9 +396,18 @@
                             <img class="member__card-img" src="./img/images-team-img-3.jpg" alt="">
                             <div class="member__card-hover">
                                 <div class="member__card-socials socials">
-                                    <a class="socials__item socials__item--facebook" href=""></a>
+                                    <!-- <a class="socials__item socials__item--facebook" href=""></a>
                                     <a class="socials__item socials__item--twitter" href=""></a>
-                                    <a class="socials__item socials__item--behance" href=""></a>
+                                    <a class="socials__item socials__item--behance" href=""></a> -->
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#facebook"></use>
+                                    </svg>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#twitter"></use>
+                                    </svg>
+                                    <svg class="socials__icon">
+                                        <use xlink:href ="./img/sprite.svg#behance"></use>
+                                    </svg>
                                 </div>
                             </div>
                         </div>
